# twitch-free-tts

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp  toolchain-mingw64.cmake
src/: main.cpp
